syntax = "proto3";
package qa.loadtesting.alilo.backend.v1;

option go_package = "github.com/aliexpressru/alilo-backend/pkg/pb/qa/loadtesting/alilo/backend/v1";


import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

import "qa/loadtesting/alilo/backend/v1/models.proto";
import "qa/loadtesting/alilo/backend/v1/parsing_messages.proto";


// hint: checkout protobuf style guide https://developers.google.com/protocol-buffers/docs/style
service ParsingService {

  // ParseCUrl - Convert cURL to JSON format
  rpc ParseCUrl(.qa.loadtesting.alilo.backend.v1.ParseCUrlRequest) returns (.qa.loadtesting.alilo.backend.v1.ParseCUrlResponse) {
    option (google.api.http) = {
      post: "/v1/parsing/CUrl"
      body: "*"
    };
  }
}

